--- a/app.css
+++ b/app.css
@@ -4,10 +4,12 @@
 
 }
 h1{
-    color:greenyellow;
+    color:black;
+    font-style: italic;
+    font-weight: 200 ;
     text-align: center;
     margin-top: 50px;
-    background-color: none;
+    background-color: white;
     text-decoration: dashed;
     font-size: xx-large;
 
@@ -15,6 +17,7 @@ h1{
 .container{
     height: 70vh;
     width: 100vw;
+
     text-align: center;
     display: flex;
     justify-content: center;
@@ -23,8 +26,10 @@ h1{
 }
 .game{
     
-    height:50vh;
+    height:60vh;
     width: 100vmin;
+    background: transparent;
+    backdrop-filter: blur(2px);
     text-align: center;
     display: flex;
     flex-wrap: wrap;
@@ -40,7 +45,14 @@ h1{
     border: none;
    font-size: x-large;
    color: black;
+   transition: all cubic-bezier(1, 0, 0, 1) ease-in  1s;
 
+}
+.boxes:hover{
+    background-color: grey;
+     transform: scale(1.1); /* bahar niklega */
+    box-shadow: 0 15px 30px rgba(0,0,0,0.4);
+    
 }
 body{
     background-image: url("tic tac toe.jpg");
@@ -72,6 +84,15 @@ body{
    color: #fff;
    border-radius: 1rem;
    border: none;
-
-
+   transition: 
+       transform 0.4s ease,
+       box-shadow 0.4s ease,
+       background-color 0.4s ease;
 }
+#reset-btn:hover{
+        transform: scale(1.15);
+    box-shadow: 0 10px 25px rgba(255,255,255,0.3);
+    
+}
+
+
